<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:orientation="horizontal">
    <LinearLayout
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtExpire"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="128 days left expired"
            android:textColor="@color/green"/>
        <TextView
            android:id="@+id/txtUserName"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Member A"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/btnEditProfile"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"/>
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:background="@color/grey">

        </LinearLayout>
        <TextView
            android:id="@+id/btnTipToUse"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_to_use"/>
        <TextView
            android:id="@+id/btnPrivacyPolicy"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"/>
        <TextView
            android:id="@+id/btnDisclaimer"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"/>

        <LinearLayout
            android:id="@+id/btnLogout"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/back_button"/>
            <TextView
                android:id="@+id/txtLogout"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOG OUT"/>
        </LinearLayout>
        <View
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_weight="1"/>
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <TextView
            android:hint="@string/guest_email"
            android:id="@+id/txtEmail"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"/>

    </LinearLayout>
    <View
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_weight="1"/>
</LinearLayout>