<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutMain">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/viewPager">

            </android.support.v4.view.ViewPager>
            <logo.omcsa_v9.widget.GalleryNavigator
                android:visibility="gone"
                android:id="@+id/navigator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/minimalist_anatomy_icons"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1"></LinearLayout>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/btnSkipLogin"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="15dp"
                android:alpha="0.5"
                android:textColor="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center"
                android:text="@string/skip_location"
                android:background="@drawable/border_round_fill_grey"/>
            <EditText
                android:textSize="16sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:hint="@string/username"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="1dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/border_shadow"/>
            <EditText
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="1dp"
                android:inputType="textPassword"
                android:background="@drawable/border_shadow"/>
            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/border_round_fill_grey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btnForgetPassword"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/forget_password"/>
                <View
                    android:layout_gravity="center"
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:background="@color/grey"/>
                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/btnSignup"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/signup_now"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>