<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutMain"
    tools:context=".activities.ForgetPasswordActivity">
    <ImageView
        android:layout_margin="40dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/skeleton"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:letterSpacing="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutMain">
            <EditText
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:hint="@string/username_or_emailaddress"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="1dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/border_shadow"/>
            <Button
                android:id="@+id/btnResetPassword"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:background="@drawable/border_round_fill_grey"/>

            <LinearLayout
                android:id="@+id/btnBack"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/back_button"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>